--- a/influence.css/influe.css
+++ b/influence.css/influe.css
@@ -35,10 +35,78 @@
     text-decoration: none;
     color: #3A3A3A;
     font-size: 1.1rem;
+    font-weight: 500;
+}
+
+.brand-logo {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #3A3A3A;
 }
 
 
 
+
+/* Hero Section styling */
+.hero-section {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    padding: 120px 0 170px 0;
+    gap: 130px;
+    align-items: center;
+}
+
+.hero-info {
+    width: 582px;
+    height: 270px;
+}
+
+.hero-title {
+    font-size: 3.25rem;
+    color: #3A3A3A;
+    margin-top: 0px;
+    margin-bottom: 16px;
+}
+
+.hero-description {
+    color: #3A3A3A;
+    margin-top: 0px;
+    margin-bottom: 16px;
+}
+
+.btn-1 {
+    padding: 11px 25px;
+    background-color: #E02C6D;
+    color: #ffffff;
+    border: none;
+    border-radius: 40px;
+}
+
+.hero-images img {
+    width: 100%;
+    background-image: url(../images/Circle\ design.svg);
+}
+
+
+
+
+/* 3rd/sponsors section styling */
+.sponsors-images {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    width: 1110px;
+    margin: 0 auto;
+    justify-items: center;
+    padding: 20px;
+    border-top: 1px solid #7878853a;
+    border-bottom: 1px solid #7878853a;
+    
+}
+
+.sponsors-section {
+    padding-bottom: 100px;
+}
 
 
 
@@ -51,5 +119,76 @@
     .menu-pages ul {
         gap: 10px;
         /* flex-direction: column; */
+    }
+
+    /* Hero sectin Responsive */
+    .hero-section {
+    flex-direction: column-reverse;
+    justify-content: center;    
+    padding: 100px 0 80px 0;
+    /* gap: 50px; */
+    }
+
+    .hero-title {
+    font-size: 2.25rem;
+    }
+
+
+    /* 3rd/Sponsors section */
+    .sponsors-images {
+    grid-template-columns: repeat(1,1fr);
+    gap: 30px;
+    
+}
+
+}
+
+
+/* 4th/popular Section style */
+.popular-div {
+    width: 1050px;
+    margin: 0 auto;
+}
+
+
+.center-title {
+    text-align: center;
+    font-size: 1.75rem;
+    margin-top: 0;
+    margin-bottom: 0;
+    color: #3A3A3A;
+}
+
+
+.popular-div {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+
+
+
+
+/* Tablet Responsive */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .navbar {
+        flex-direction: column;
+    }
+
+    .menu-pages ul {
+        gap: 15px;
+        /* flex-direction: column; */
+    }
+
+
+    /* Hero section Responsive */
+    .hero-section {
+    padding: 110px 0 120px 0;
+    gap: 100px;
+    }
+
+
+    .hero-title {
+    font-size: 3rem;
     }
 }
